<resources>
    <string name="app_name">Shopping App</string>
    <string name="onshop">ONSHOP</string>
    <string name="loginimage">LoginImage</string>
    <string name="email_id">Email Id</string>
    <string name="login">LOGIN</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="have_no_account">Don\'t have an account?</string>
    <string name="register"> Register</string>
    <string name="Login_pass">Password</string>
    <string name="create_account">Create An Account</string>
    <string name="first_name">First Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="terms1">I Agree To The</string>
    <string name="terms2"><u>Terms &amp; Conditions</u></string>
    <string name="last_name">Last Name</string>
    <string name="REGISTER">REGISTER</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="Register_activity_login"><u>Login</u></string>

    <string name="error_msg_firstName">Please enter your First Name</string>
    <string name="error_msg_lastName">Please enter your Last Name</string>
    <string name="error_msg_Password">"Please set your Password</string>
    <string name="error_msg_emailId">Please enter your Email Id</string>
    <string name="error_msg_incorrect_email">Please check your Email Id</string>
    <string name="error_msg_ConfirmPassword">Please confirm your Password</string>
    <string name="error_msg_password_notMatch">Password does not match</string>
    <string name="error_msg_termsAnd_Condtitions_not_checked">Please accept our Terms and Conditions</string>
    <string name="successfull_registration">Registration Successful</string>
    <string name="please_wait">Please Wait...</string>
    <string name="reset_password">RESET PASSWORD</string>
    <string name="submit">SUBMIT</string>
    <string name="reset_msg">Please enter your email address. We\'ll send you an email for resetting you password</string>
    <string name="complete_you_profile">COMPLETE YOUR PROFILE</string>
    <string name="profilepicture">ProfilePicture</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="male">MALE</string>
    <string name="female">FEMALE</string>
    <string name="save">SAVE</string>
    <string name="toolbarText">UPDATE YOUR PROFILE</string>

    <string name="GENDER">gender</string>
    <string name="mobile">mobile</string>
    <string name="image">image</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_dashboard">DashboardActivity</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_main3">MainActivity3</string>
    <string name="orders"><b>ONSHOP</b></string>
    <string name="Shop"><b>ONSHOP</b></string>
    <string name="products"><b>ONSHOP</b></string>
    <string name="products_bottomNav">Products</string>
    <string name="orders_bottomNav">Orders</string>
    <string name="Shop_bottomNav">Shop</string>
    <string name="shopsettings">ShopSettings</string>
    <string name="settings_header">Settings Header</string>
    <string name="user_image">User Image</string>
    <string name="settings_profile">Profile</string>
    <string name="forward_arrow">Forward Arrow</string>
    <string name="settings_address">Address</string>
    <string name="logout">LOGOUT</string>
    <string name="settings">SETTINGS</string>
    <string name="add_product">Add Product</string>
    <string name="product_image">Product Image</string>
    <string name="add_product_image">Add Product Image</string>
    <string name="product_name">Product Name</string>
    <string name="Price">Price: </string>
    <string name="Quantity">Quantity</string>
    <string name="product_description">Description</string>
    <string name="add_to_cart">ADD TO CART</string>
    <string name="add">ADD</string>
    <string name="add_product_btn">ADD PRODUCT</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="shopFragment_message">No items uploaded yet</string>
    <string name="product_details">Product Details</string>
    <string name="buy_now_btn">BUY NOW</string>
    <string name="add_to_cart_btn">ADD TO CART</string>
    <string name="in_stock_tv">IN STOCK</string>
    <string name="offers">Offers</string>
    <string name="remove_from_cart">Remove From Cart</string>
    <string name="add_to_wishlist">Add To Wishlist</string>
    <string name="cart_menu">Cart Menu</string>
    <string name="place_order">PLACE ORDER</string>
    <string name="cart_msg">No items in cart</string>
    <string name="decrease_the_quantity">Decrease the quantity</string>
    <string name="increase_the_quantity">Increase the quantity</string>
    <string name="go_to_cart">GO TO CART</string>

    <string name="product_left_msg">left</string>
    <string name="subtotal">Subtotal</string>
    <string name="shipping_charge">Shipping Charge</string>
    <string name="total_amount">Total Amount</string>
    <string name="amount">Amount</string>

    <string name="total">₹ %s</string>

    <string name="outOfStock">OUT OF STOCK</string>
    <string name="add_address">ADD ADDRESS</string>

    <string name="address">%s, %s, %s, %s, %s</string>
    <string name="adding_address">adding address</string>
    <string name="title_checkout">CHECKOUT</string>
    <string name="checkout_lbl_items_receipt">Items Receipt</string>
    <string name="lbl_subtotal">Subtotal</string>
    <string name="lbl_shipping_charge">Shipping Charge</string>
    <string name="lbl_total_amount">Total Amount</string>
    <string name="lbl_payment_mode">Payment Mode</string>
    <string name="lbl_cash_on_delivery">Cash On Delievery</string>
    <string name="btn_lbl_place_order">PLACE ORDER</string>
</resources>