<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation16"
    app:startDestination="@+id/navigation_shop">

    <fragment
        android:id="@+id/navigation_shop"
        android:name="com.example.shoppingapp.Activities.TheMainActivity.Fragments.ShopFragment"
        android:label="@string/Shop"
        tools:layout="@layout/fragment_shop" />

    <fragment
        android:id="@+id/navigation_orders"
        android:name="com.example.shoppingapp.Activities.TheMainActivity.Fragments.OrdersFragment"
        android:label="@string/orders"
        tools:layout="@layout/fragment_orders" />

    <fragment
        android:id="@+id/navigation_products"
        android:name="com.example.shoppingapp.Activities.TheMainActivity.Fragments.ProductsFragment"
        android:label="@string/products"
        tools:layout="@layout/fragment_products" />
</navigation>