<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="Activities.LoginActivity">
    <FrameLayout
        android:id="@+id/Logo"
        android:layout_width="match_parent"
        android:layout_height="@dimen/loginActivity_image_height"
        app:layout_constraintBottom_toTopOf="@id/ResetCredentials"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/splash"
            android:scaleType="fitXY"
            android:contentDescription="@string/loginimage" />

        <com.example.shoppingapp.Utils.CustomTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:layout_gravity="center"
            android:textColor="@color/white"
            android:text="@string/onshop" />
    </FrameLayout>
    <LinearLayout
        android:id="@+id/ResetCredentials"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:padding="30dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/Logo"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">
          <com.example.shoppingapp.Utils.CustomTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reset_password"
            android:layout_gravity="center"
            android:textSize="20sp"
            android:textColor="?android:attr/textColorPrimary"
            android:layout_marginBottom="15dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:text="@string/reset_msg"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
            <com.example.shoppingapp.Utils.CustomEditText
                android:id="@+id/reset_EmailId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email_id"
                android:textColorHint="#7A8089"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.example.shoppingapp.Utils.CustomButton
            android:id="@+id/send_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:minHeight="50dp"
            android:text="@string/submit"
            android:background="@drawable/button_view_gradient"/>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>