<?xml version="1.0" encoding="utf-8"?>


<LinearLayout
    android:id="@+id/register_activity_content"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context="Activities.RegisterActivity">
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/register_activity_toolbar"
            android:background="@drawable/app_view_gradient"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.example.shoppingapp.Utils.CustomTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/create_account"

                android:textColor="@color/white"
                android:layout_gravity="center"
                android:textSize="20sp"/>
        </androidx.appcompat.widget.Toolbar>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
            <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="25dp">
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                <com.example.shoppingapp.Utils.CustomEditText
                    android:id="@+id/first_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/first_name"
                    android:textColorHint="#7A8089"
                    />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/register_activity_marginTop"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                <com.example.shoppingapp.Utils.CustomEditText
                    android:id="@+id/last_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/last_name"
                    android:textColorHint="#7A8089"
                        />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/register_activity_marginTop"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                <com.example.shoppingapp.Utils.CustomEditText
                    android:id="@+id/Register_Activity_EmailAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email_id"
                    android:textColorHint="#7A8089"
                    />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/register_activity_marginTop"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                <com.example.shoppingapp.Utils.CustomEditText
                    android:id="@+id/Register_Activity_Password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/Login_pass"
                    android:textColorHint="#7A8089"
                    />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/register_activity_marginTop"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                <com.example.shoppingapp.Utils.CustomEditText
                    android:id="@+id/confirm_pass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/confirm_password"
                    android:textColorHint="#7A8089"
                    />
            </com.google.android.material.textfield.TextInputLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/checkbox"
                    android:layout_width="36dp"
                    android:layout_height="wrap_content" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/terms1"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/terms2"
                    android:layout_marginStart="5dp"
                    android:textStyle="bold"/>
            </LinearLayout>
            <com.example.shoppingapp.Utils.CustomButton
                android:id="@+id/register_activity_registerButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:minHeight="50dp"
                android:text="@string/REGISTER"
                android:background="@drawable/button_view_gradient"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="25dp"
                android:layout_gravity="center"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/already_have_an_account"/>
                <TextView
                    android:id="@+id/register_activity_login"
                    android:layout_width="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_height="wrap_content"
                    android:text="@string/Register_activity_login"
                    android:textStyle="bold"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>



