<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activities.CompleteProfile">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/cprofile_toolbar"
        android:layout_width="match_parent"
        android:background="@drawable/app_view_gradient"
        android:layout_height="wrap_content"
        >
        <com.example.shoppingapp.Utils.CustomTextView
            android:id="@+id/cprofile_toolbarText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/complete_you_profile"
            android:textColor="@color/white"
            android:textSize="20sp"/>
    </androidx.appcompat.widget.Toolbar>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:fillViewport="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:orientation="vertical"
            android:gravity="center_horizontal">
            <FrameLayout
                android:id="@+id/cprofile_profilePictureLayout"
                android:layout_width="125dp"
                android:layout_marginTop="20dp"
                android:layout_height="125dp">
                <ImageView
                    android:id="@+id/cprofile_profilePicture"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/profile_picture_drawable"
                    android:scaleType="fitXY"
                    android:background="@drawable/ic_user_placeholder"
                    android:contentDescription="@string/profilepicture"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    />
            </FrameLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_marginTop="45dp">
                <com.example.shoppingapp.Utils.CustomEditText
                    android:id="@+id/cprofile_firstName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="50dp"
                    android:hint="@string/first_name"
                    />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_marginTop="10dp">
                <com.example.shoppingapp.Utils.CustomEditText
                    android:id="@+id/cprofile_lastName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="50dp"
                    android:hint="@string/last_name"
                    />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_marginTop="10dp">
                <com.example.shoppingapp.Utils.CustomEditText
                    android:id="@+id/cprofile_emailId"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="50dp"
                    android:hint="@string/email_id"
                    />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_marginTop="10dp">
                <com.example.shoppingapp.Utils.CustomEditText
                    android:id="@+id/cprofile_mobileNo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="50dp"
                    android:hint="@string/mobile_number"
                    />
            </com.google.android.material.textfield.TextInputLayout>
            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="50dp"
                android:layout_marginTop="50dp"
                android:orientation="horizontal">
                <com.example.shoppingapp.Utils.CustomRadioButton
                    android:id="@+id/cprofile_male"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:button="@null"
                    android:checked="true"
                    android:gravity="center"
                    android:textColor="@drawable/radio_button_textcolor"
                    android:textStyle="bold"
                    android:text="@string/male"
                    android:background="@drawable/radio_button_drawable"/>
                <com.example.shoppingapp.Utils.CustomRadioButton
                    android:id="@+id/cprofile_female"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/female"
                    android:button="@null"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:textColor="@drawable/radio_button_textcolor"
                    android:background="@drawable/radio_button_drawable"
                    android:minHeight="50dp"/>
            </RadioGroup>
            <com.example.shoppingapp.Utils.CustomButton
                android:id="@+id/cprofile_saveBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="50dp"
                android:layout_marginTop="50dp"
                android:background="@drawable/button_view_gradient"
                android:text="@string/save"/>

        </LinearLayout>
    </ScrollView>

</LinearLayout>