<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="10dp"
    android:layout_height="wrap_content"
    android:elevation="15dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/cardViewColor"
            android:orientation="horizontal"
            android:padding="10dp">

            <ImageView
                android:id="@+id/pf_recyclerView_productImage"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:contentDescription="@string/product_image"
                android:scaleType="fitXY" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <com.example.shoppingapp.Utils.CustomTextView
                    android:id="@+id/pf_recyclerView_productName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:text="@string/product_name"
                    android:textSize="20sp" />

                <com.example.shoppingapp.Utils.CustomTextView
                    android:id="@+id/pf_recyclerView_productPrice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:textColor="@color/black"
                    android:text="@string/Price"
                    android:textSize="18sp" />


            </LinearLayout>

            <ImageView
                android:id="@+id/pf_recyclerView_deleteItem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:tint="@color/black"
                android:src="@drawable/ic_baseline_delete_24" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
